--- a/style.css
+++ b/style.css
@@ -2,3 +2,28 @@
     margin: 0;
     padding: 0;
 }
+
+.secciones {
+    margin-top: 3em;
+}
+
+/*-------*/
+html, body {
+    height: 100%;
+    margin: 0; 
+    display: flex;
+    flex-direction: column; 
+}
+
+main {
+    flex: 1; 
+}
+/*-------*/
+
+footer {
+    background-color: rgb(42, 42, 42);
+    color: #ffff;
+    margin-top: 2em;
+    padding: 2em;
+    text-align: center;
+}
